# cv-backend

./: .env  Cargo.toml  database.db
migration/: Cargo.toml
migration/src/: lib.rs  m20250210_185802_create_table_users.rs  m20250210_185915_create_table_skills.rs  m20250210_190529_create_table_stories.rs  m20250210_192643_create_table_story_skills.rs
src/: main.rs
src/controller/: user_controller.rs
src/db/: mod.rs
src/entity/: user.rs
src/repository/: mod.rs
src/service/: user_service.rs
